--- a/kinorg/static/kinorg/css/film_detail.css
+++ b/kinorg/static/kinorg/css/film_detail.css
@@ -16,4 +16,19 @@ p.italic {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
+}
+
+.my_available_lists {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.available_list_item {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: flex-start;
+  gap: 10px;
 }
