--- a/kinorg/static/kinorg/css/home_page.css
+++ b/kinorg/static/kinorg/css/home_page.css
@@ -3,11 +3,11 @@
     grid-template-rows: 10px 50px 50px 1fr;
 }
 
-.login_link {
+.login_link, .my_lists {
     grid-row: 2;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     text-decoration: underline;
 }
 
@@ -15,7 +15,7 @@
     grid-row: 3;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .film_list_container {
