--- a/kinorg/templates/kinorg/home.html
+++ b/kinorg/templates/kinorg/home.html
@@ -13,13 +13,13 @@
 	<div class="home_page_container">
 
 		{% if user.is_authenticated %}
-			<a href="{% url 'kinorg:my_lists' %}" class="login_link"><h3>My Lists</h3></a>
+			<div class="my_lists"><a href="{% url 'kinorg:my_lists' %}"><span>My Lists</span></a></div>
 		{% else %}
-			<a href="{% url 'user_admin:login' %}" class="login_link"><h3>Login</h3></a>
+			<div  class="login_link"><a href="{% url 'user_admin:login' %}"><span>Login</span></a></div>
 		{% endif %}
 
 		<div class="list_header">
-			<h3>Recently Added</h3>
+			<span>Recently Added</span>
 		</div>
 
 		<div class="film_list_container">
@@ -30,7 +30,7 @@
 
     			<li class="film_item">
     				<a href="{% url 'kinorg:film_detail' film.movie_id %}">
-    					<img class="poster" src="{{config_data.secure_base_url}}w500{{film.poster_path}}">
+    					<img class="poster" src="{{config_data.secure_base_url}}w200{{film.poster_path}}">
     				</a>
     			</li>
 
