--- a/kinorg/templates/kinorg/person_credits.html
+++ b/kinorg/templates/kinorg/person_credits.html
@@ -13,7 +13,7 @@
 <div class="results_list_container">
 
 <div class="artist_name">
-    <h2>{{ results.name }}</h2>
+    <span>{{ results.name }}</span>
 </div>
 
 {% if results.movie_credits.cast %}
@@ -25,7 +25,7 @@
 <li class="results_item">
     <div class="result">
 	   {% if film.poster_path %}
-        <img class="poster" src="{{config_data.secure_base_url}}w92{{film.poster_path}}">
+        <img class="poster" src="{{config_data.secure_base_url}}w200{{film.poster_path}}">
         {% else %}
         <img class="poster" src="{% static 'kinorg/images/placeholder.jpg' %}">
         {% endif %}
