--- a/kinorg/templates/kinorg/base.html
+++ b/kinorg/templates/kinorg/base.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>kinorg.com</title>
 
 	{# Global stylesheets #}
 	<link rel="stylesheet" type="text/css" href="{% static 'css/kinorg_base.css' %}">
@@ -52,7 +52,7 @@
 
         {% block content %}{% endblock %}
     <div class="jmgk_credit">
-    	<span>jmgk.dev</span>
+    	<!-- <span>jmgk.dev</span> -->
 	</div>
 </body>
 </html>
