--- a/kinorg/static/kinorg/css/home_page.css
+++ b/kinorg/static/kinorg/css/home_page.css
@@ -1,10 +1,10 @@
 .home_page_container {
     display: grid;
-    grid-template-rows: 10px 50px 50px 1fr;
+    grid-template-rows: 60px 50px 1fr;
 }
 
-.login_link, .my_lists {
-    grid-row: 2;
+.login_link, .my_lists_link {
+    grid-row: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,14 +12,14 @@
 }
 
 .list_header {
-    grid-row: 3;
+    grid-row: 2;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .film_list_container {
-    grid-row: 4;
+    grid-row: 3;
     display: grid;
     grid-template-columns: 1fr minmax(110px, 1000px) 1fr;
 }
