--- a/kinorg/static/kinorg/css/my_lists.css
+++ b/kinorg/static/kinorg/css/my_lists.css
@@ -1,13 +1,23 @@
-.invitations_container {
+.lists_page_container {
+    display: grid;
+    grid-template-rows: 60px 1fr 50px 50px;
+}
+
+.my_lists_title {
+    grid-row: 1;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .my_lists_container {
+    grid-row: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap: 30px;
 
 }
 
@@ -21,7 +31,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 30px;
 }
 
 .list_item {
@@ -32,7 +42,15 @@
     gap: 10px;
 }
 
-.footer_links {
+.invitations_container {
+    grid-row: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.create_list {
+    grid-row: 4;
     display: flex;
     justify-content: center;
     gap: 50px;
