--- a/kinorg/templates/kinorg/search.html
+++ b/kinorg/templates/kinorg/search.html
@@ -8,6 +8,10 @@
 {% block content %}
 
     <div class="results_list_container">
+        
+    <div class="results_title_info">
+        <span>results for "{{query}}"</span>
+    </div>
 
 
         {% if results_list %}
