--- a/kinorg/static/kinorg/css/search.css
+++ b/kinorg/static/kinorg/css/search.css
@@ -2,16 +2,26 @@
     grid-row: 2;
     display: grid;
     grid-template-columns: auto minmax(100px, 1000px) auto;
-    margin-top: 20px;
+    grid-template-rows: 60px auto;
+}
+
+.results_title_info {
+    grid-row: 1;
+    grid-column: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .list_of_results {
     grid-column: 2;
+    grid-row: 2;
     display: flex;
     flex-flow: column;
     justify-content: flex-start;
     padding: 0;
     gap: 10px;
+    margin-top: 30px;
 }
 
 .results_item {
