--- a/kinorg/templates/kinorg/home.html
+++ b/kinorg/templates/kinorg/home.html
@@ -30,7 +30,11 @@
 
     			<li class="film_item">
     				<a href="{% url 'kinorg:film_detail' film.movie_id %}">
+    					{% if film.poster_path != 'None' %}
     					<img class="poster" src="{{config_data.secure_base_url}}w200{{film.poster_path}}">
+    					{% else %}
+                        <img class="poster" src="{% static 'images/placeholder.jpg' %}">
+    					{% endif %}
     				</a>
     			</li>
 
