--- a/user_admin/templates/user_admin/reset_password_complete.html
+++ b/user_admin/templates/user_admin/reset_password_complete.html
@@ -1,10 +1,23 @@
 {% extends "kinorg/base.html" %}
 {% block title %} Password Reset {% endblock title%}
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'user_admin/css/custom_reset_password_complete.css' %}">
+{% endblock %}
 
 {% block content %}
 
+<div class="reset_password_complete_container">
+
+	<div class="reset_password_complete_message">
+
 <p>Your password has been set. You may go ahead and log in now.</p>
 
-<a href="{% url 'user_admin:login' %}" class="login_link"><h3>Login</h3></a>
+<a href="{% url 'user_admin:login' %}" class="login_link"><button>Login</button></a>
+
+	</div>
+
+</div>
 
 {% endblock %}
