--- a/user_admin/templates/user_admin/reset_password_done.html
+++ b/user_admin/templates/user_admin/reset_password_done.html
@@ -1,10 +1,23 @@
 {% extends "kinorg/base.html" %}
 {% block title %} Password Reset {% endblock title%}
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'user_admin/css/custom_reset_password_done.css' %}">
+{% endblock %}
 
 {% block content %}
+
+<div class="reset_done_container">
+
+<div class="reset_done_message">
 
 <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
 
 <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+
+</div>
+
+</div>
 
 {% endblock %}
