--- a/staticfiles/css/kinorg_base.css
+++ b/staticfiles/css/kinorg_base.css
@@ -108,6 +108,11 @@ input {
   background-color: black;
 }
 
+select {
+  background-color: black;
+}
+
+
 .top_bar {
 	display: grid;
 	grid-template-rows: 75px 50px 50px;
