--- a/user_admin/templates/user_admin/reset_password_confirm.html
+++ b/user_admin/templates/user_admin/reset_password_confirm.html
@@ -1,8 +1,18 @@
 {% extends "kinorg/base.html" %}
 {% block title %} Password Reset {% endblock title%}
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'user_admin/css/custom_reset_password_confirm.css' %}">
+{% endblock %}
+
 {% block content %}
 
 {% if validlink %}
+
+<div class="reset_confirm_container">
+
+    <div class="reset_confirm_message">
 
     <h3>Reset Your Password</h3>
     
@@ -20,7 +30,7 @@
     </form>
                               
 
-{% else %}
+    {% else %}
 
     <div>
 
@@ -29,6 +39,10 @@
         Please request a new password reset.
 
     </div>
+
+    </div>
+
+</div>
 
 {% endif %}
 
