--- a/kinorg/templates/kinorg/person_credits.html
+++ b/kinorg/templates/kinorg/person_credits.html
@@ -36,11 +36,11 @@
 
     {% if film.title %}
 
-        <div class="add_result">
+        <div class="add_result" id="form_container_{{ forloop.counter }}">
                             
         {% if my_lists or guest_lists %}
 
-            <form method="POST" action="/add-film/">
+            <form method="POST" action="/add-film/" hx-post="/add-film/" hx-target="#form_container_{{ forloop.counter }}" hx-swap="innerHTML">
             {% csrf_token %}
 
             <input type="hidden" id="title" name="title" value="{{ film.title }}">
@@ -55,6 +55,11 @@
                     <option value="{{ lst.id }}">{{ lst.title }}</option>
                     {% endif %}
                 {% endfor %}
+                {% for glst in guest_lists %}
+                    {% if film.id not in glst.movie_ids %}
+                    <option value="{{ glst.id }}">{{ glst.title }}</option>
+                    {% endif %}
+                {% endfor %}                
             </select>
 
             <button type="submit">add to list</button>
@@ -64,7 +69,7 @@
         {% endif %}
 
     {% endif %}
-    
+
 </li>
 
 {% endfor %}
